--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1154,7 +1154,80 @@ header{
     border-radius: 3px;
     cursor: pointer;
   }
-
+  #startTaskPopupConfirmation{
+    visibility: hidden;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 400px;
+    height: 320px;
+    background: #fff;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 0.75rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  .edit-form-container-2{
+    width: 100%;
+    height: 100%;
+  }
+  #startTaskPopupConfirmation .edit-form-container-2 .form-group:nth-child(4){
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .confirmation-form {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    width: 400px;
+}
+.confirmation-form #cancelDeleteBtn {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .confirmation-form #cancelDeleteBtn ion-icon{
+    font-size: 25px;
+ }
+ .confirmation-form #cancelDeleteBtn ion-icon:hover{
+    transform: scale(1.2);
+ }
+.confirmation-form p {
+   text-align: center;
+}
+.confirmation-form .cancelBtnArea {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.confirmation-form .cancelBtnArea button {
+    margin-top: 20px;
+    padding: 10px 15px;
+    outline: none;
+    border: none;
+    background: var(--btn-color);
+    color: #fff;
+    border-radius: 0.65rem;
+    cursor: pointer;
+}
 .footer-pane{
     position: relative;
     top: 80px;
