--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,7 +337,7 @@ header{
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    color: #fff;   
+    color: #fff; 
 }
 .dashboard .slide-widget .card-content .cards .taskDates{
     position: absolute;
@@ -457,9 +457,12 @@ header{
     color: #fff;
 }
 .dashboard .slide-widget .card-content .cards .card-description{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1rem;
+    padding: 0 20px;
 }
 .dashboard .slide-widget .card-content .cards .card-action{
     position: absolute;
