--- a/static/css/login.css
+++ b/static/css/login.css
@@ -195,7 +195,7 @@ header{
     min-height: 480px;
     border-radius: 0.6rem;
     box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.35);
-    transition: all 1s ease-in-out;
+    transition: transform 0.3s cubic-bezier(.67,.11,.62,.82);
     visibility: hidden;
 }
 .showContainer{
@@ -256,7 +256,7 @@ header{
     background-color: #eee;
     border: none;
     margin: 8px 0;
-    padding: 10px 15px;
+    padding: 10px 30px;
     border-radius: 0.6rem;
     width: 100%;
     outline: none;
@@ -281,6 +281,19 @@ header{
     opacity: 0;
     z-index: 1;
 }
+.input-container {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.input-icon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: #333;
+}
+
 .container.active .sign-up{
     transform: translateX(100%);
     opacity: 1;
