--- a/static/css/login.css
+++ b/static/css/login.css
@@ -62,6 +62,7 @@ header{
     width: 100%;
     text-align: center;
     font-weight: 500;
+    cursor: pointer;
 
 }
 .navigation ul li a .icon{
@@ -72,6 +73,7 @@ header{
     transition: 0.5s;
     text-align: center;
     color: #fff;
+    cursor: pointer;
 }
 .navigation ul li a:hover .icon{
     color: var(--btn-color);
@@ -118,8 +120,6 @@ header{
     background: var(--btn-color);
     border-radius: 0.75rem;
     padding: 0px 0 5px ;
-
-
 }
 .navigation ul li:nth-child(2).active ~ .indicator{
     transform: translateX(calc(80px * 1));
@@ -248,8 +248,7 @@ header{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 16px;
-    padding: 20px ;
+    gap: 6px;
     height: 100%;
 }
 .container input{
@@ -265,6 +264,7 @@ header{
     position: absolute;
     top: 0;
     height: 100%;
+    padding: 0 20px;
     transition: all 0.6s ease-in-out;
 }
 .sign-in{
@@ -283,7 +283,8 @@ header{
 }
 .input-container {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
 .input-icon {
