--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,7 +222,7 @@ header{
     'main-widget main-widget aside-widget'
     'main-widget main-widget aside-widget'
     ;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 4fr;
 }
 .dashboard .top-widget,
@@ -230,7 +230,8 @@ header{
 .dashboard .aside-widget{
     color: #fff;
     padding: 20px;
-    /* border: 1px skyblue solid;  */
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .dashboard .top-widget{
     position: relative;
@@ -290,15 +291,15 @@ header{
     justify-content: center;
 }
 .dashboard .top-widget .tasks-status-container .statusList .tasks .task-icon img{
-    width: 50px;
-    height: 50px;
+    width: 24px;
+    margin-right: 10px;
 }
 .dashboard .top-widget .tasks-status-container .statusList .tasks .task-icon span{
     position: absolute;
-    top: -4px;
-    right: 16px;
-    width: 25px;
-    height: 25px;
+    top: -12px;
+    right: 40px;
+    width: 15px;
+    height: 15px;
     background: #fff;
     border-radius: 50%;
     display: flex;
@@ -669,6 +670,46 @@ header{
 .on-progress-nil{
     color : #d64b4b;
 }
+/* Tablets and below (up to 768px) */
+@media (max-width: 768px) {
+    .dashboard {
+        grid-template-columns: 1fr; /* Stack widgets on top of each other */
+    }
+
+    .statusList {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .tasks {
+        margin-bottom: 20px;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    .dashboard {
+        padding: 10px;
+    }
+
+    .top-widget, .slide-widget, .aside-widget {
+        padding: 15px;
+    }
+
+    .task-icon img {
+        width: 20px; /* Make icons smaller */
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .dashboard {
+        grid-template-columns: 1fr 4fr 1fr; /* Adjust the size ratio */
+    }
+
+    /* You might want to add more specific styling here */
+}
+
 .profile-card {
     display: none;
     position: absolute;
@@ -827,7 +868,6 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px skyblue solid;
 
 }
 .task-pane .top-nav .new-task{
@@ -1242,6 +1282,9 @@ header{
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
+  .edit-form-container p{
+    text-align: center;
+  }
   #closeBtn{
     position: absolute;
     top: 3px;
@@ -1305,9 +1348,13 @@ header{
     border-radius: 0.75rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
-  .edit-form-container-2{
+  #startTaskPopupConfirmation .edit-form-container-2{
     width: 100%;
     height: 100%;
+  }
+  #startTaskPopupConfirmation .edit-form-container-2 p{
+    text-align: center;
+    margin-bottom: 10px;
   }
   #startTaskPopupConfirmation .edit-form-container-2 .form-group:nth-child(4){
     width: 100%;
@@ -1329,8 +1376,8 @@ header{
 }
 .confirmation-form #cancelDeleteBtn {
     position: absolute;
-    top: 2px;
-    right: 2px;
+    top: 3px;
+    right: 3px;
     width: 25px;
     height: 25px;
     display: flex;
@@ -1383,8 +1430,8 @@ header{
 }
 #click-to-popup-task-data #task-data #hidePopupBtn{
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 3px;
+    right: 3px;
     width: 25px;
     height: 25px;
     display: flex;
@@ -1509,10 +1556,9 @@ header{
     text-align: center;
 
 }
-.content .left-side .details i{
+.content .left-side .details ion-icon{
     font-size: 30px;
     color: #3e2093;
-    margin-bottom: 10px;
 }
 .content .left-side .details .topic{
     font-size: 18px;
@@ -1635,31 +1681,31 @@ header{
     margin-right: 5px;
   }
 @media (max-width: 950px) {
-    .container{
+    .container-contact-form{
         width: 90%;
         padding: 30px 35px 40px 35px;
     } 
 }
 @media (max-width: 820px) {
-    .container{
+    .container-contact-form{
         margin: 40px 0;
         height: 100%;
 
     } 
-    .container .content{
+    .container-contact-form .content{
         flex-direction: column-reverse;
     }
-    .container .content .left-side{
+    .container-contact-form .content .left-side{
         width: 100%;
         flex-direction: row;
         margin-top: 40px;
         justify-content: center;
         flex-wrap: wrap;
     }
-    .container .content .left-side::before{
+    .container-contact-form .content .left-side::before{
         display: none;
     }
-    .container .content .right-side{
+    .container-contact-form .content .right-side{
         width: 100%;
         margin-left: 0;
     }
