--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,6 +64,37 @@ header{
     z-index: 999;
 }
 
+.notification-icon {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 24px; /* Adjust based on your design */
+    background: #fff;
+    border-radius: .4rem;
+  }
+  
+  .badge {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    width: 16px;
+    height: 16px;
+    padding: 5px;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+  
 /* Dropdown Button */
 .profile-button {
     position: absolute;
@@ -83,7 +114,7 @@ header{
   }
   
   .profile-button:hover, .profile-button:focus {
-    background-color: #ddd;
+    background-color: #dfd3d3;
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -247,8 +278,6 @@ header{
     display: flex;
     align-items: center;
     column-gap: 60px;
-    
-
 }
 .dashboard .top-widget .tasks-status-container .salutation{
     height: 100%;
@@ -327,7 +356,6 @@ header{
     position: relative;
     width: 100%;
     height: 100%;
-
 }
 .dashboard .slide-widget .card-content .cards{
     position: relative;
@@ -902,6 +930,7 @@ header{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 960px;
+    max-width: 100%;
     background-color: #f9f9f9;
     border-radius: 0.4rem;
     padding: 10px;
@@ -1140,6 +1169,7 @@ header{
     padding: 20px;
     visibility: hidden; 
     transition: all 0.5s ease-in-out;
+    z-index: 1000;
 }
 .showTaskForm{
     top: 50%;
@@ -1305,11 +1335,10 @@ header{
     border-radius: 8px;
     color: #f0e7e7;
 }
-.toast-test{
+#trackMessage{
         position: fixed;
-        top: 20px;
-        left: 50%;
-        transform: translateX(-50%);
+        bottom: 20px;
+        right: 20px;
         background-color: #333;
         color: #fff;
         padding: 10px 20px;
